--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,6 +36,11 @@ jobs:
           npm install
           npm test || echo "No frontend tests configured"
 
+      - name: Debug AWS secrets presence (no values shown)
+        run: |
+          echo "HAS_AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID != '' }}"
+          echo "HAS_AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY != '' }}"
+          
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
